--- a/Hate Speech Detection with Machine Learning/Hate_Speech_Detection_with_Machine_Learning.ipynb
+++ b/Hate Speech Detection with Machine Learning/Hate_Speech_Detection_with_Machine_Learning.ipynb
@@ -80,23 +80,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zsh:1: unknown sort specifier\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip nltk.download('stopwords')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
    "outputs": [],
@@ -716,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:26:10) \n[GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
