--- a/Hate Speech Detection with Machine Learning/Hate_Speech_Detection_with_Machine_Learning.ipynb
+++ b/Hate Speech Detection with Machine Learning/Hate_Speech_Detection_with_Machine_Learning.ipynb
@@ -681,6 +681,32 @@
    "source": [
     "So this is how you can train a machine learning model for the task of detecting hate speech by using the Python programming language. Hate speech is one of the serious issues we see on social media platforms like Twitter and Facebook daily. Most of the posts containing hate speech can be found in the accounts of people with political views. I hope you liked this article on the task of detecting hate speech with Machine Learning using Python. Feel free to ask your valuable questions in the comments section below."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sheikh Rasel Ahmed "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Science || Machine Learning || Deep Learning || Artificial Intelligence Enthusiast"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### LinkedIn - https://www.linkedin.com/in/shekhnirob1\n",
+    "##### GitHub - https://github.com/Rasel1435\n",
+    "##### Behance - https://www.behance.net/Shekhrasel2513"
+   ]
   }
  ],
  "metadata": {
