--- a/Social Media Ads Classification with Machine Learning/Social_Media_Ads_Classification.ipynb
+++ b/Social Media Ads Classification with Machine Learning/Social_Media_Ads_Classification.ipynb
@@ -741,7 +741,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -755,9 +755,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
-  },
-  "orig_nbformat": 4
+   "version": "3.11.4"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
